--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <b>OUR OFFERINGS</b>
         </div>
         <div class="block2">
-            <ul type="disc">
+            <div class="block22"><ul type="disc">
                 <font size="3">
                     <li>Home</li>
                     <li>Contact Us</li>
                     <li>Review Us</li>
                 </font>
-            </ul>
+            </ul></div>
         </div>
         <div class="block3">
             <div class="box1">
@@ -53,23 +53,19 @@
             </div>
         </div>
         <div class="block6">
-            THE BEST PLACE FOR THE BEST CAREER.
-        </div>
-        <div class="block7">
-            <div class="child1">
-                You can ask doubt <br> in our doubt section.
+            <div class="child child1">
+                THE BEST PLACE FOR THE BEST CAREER.
             </div>
-            <div class="child2">
+            <div class="child child2">
+                You can ask doubt<br> in our doubt section.
+            </div>
+            <div class="child child3">
                 Get 30% Off by applying <br> code
             </div>
-            <div class="child3">
+            <div class="child child4">
                 We assure that your hard <br> work & our teaching will <br> give bright result. 
             </div>
-            <div class="child4">
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore fugit eligendi debitis at quibusdam voluptate excepturi alias doloribus quisquam doloremque, amet mollitia ipsum, laboriosam voluptatem autem esse rerum optio corporis.
-                   Illum sequi adipisci tempore quasi provident consectetur itaque ad similique fugit tempora. Perferendis ipsam?
-            </div>
-            <div class="child5">
+            <div class="child child5">
                 <ol type="1">
                     <li>Study Material</li>
                     <hr>
@@ -85,9 +81,14 @@
                     <hr>
                 </ol>
             </div>
-        </div>
-        <div class="block8">
-            ALL THE BEST!
+            <div class="child child6">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore fugit eligendi debitis at quibusdam voluptate excepturi alias doloribus quisquam doloremque, amet mollitia ipsum, laboriosam voluptatem autem esse rerum optio corporis.
+                Illum sequi adipisci tempore quasi provident consectetur itaque ad similique fugit tempora. Perferendis ipsam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Lorem ipsum dolor Lorem, ipsum dolor.
+            </div>
+          
+            <div class="child child7">
+                    ALL THE BEST!
+            </div>
         </div>
     </div>
 </body>
